# Vulkan-Engine-Proof-Of-Concept

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  vert.spv
libraries/: clean.sh
libraries/glfw/examples/: windows
libraries/glfw/tests/: inputlag
libraries/glm/test/bug/: test-bug_ms_vec_static
libraries/glm/test/core/: test-core_cpp_constexpr  test-core_cpp_defaulted_ctor  test-core_force_aligned_gentypes  test-core_force_arch_unknown  test-core_force_compiler_unknown  test-core_force_ctor_init  test-core_force_cxx03  test-core_force_cxx98  test-core_force_cxx_unknown  test-core_force_explicit_ctor  test-core_force_inline  test-core_force_platform_unknown  test-core_force_pure  test-core_force_quat_wxyz  test-core_force_unrestricted_gentype  test-core_force_xyzw_only  test-core_func_common  test-core_func_exponential  test-core_func_geometric  test-core_func_integer  test-core_func_integer_bit_count  test-core_func_integer_find_lsb  test-core_func_integer_find_msb  test-core_func_matrix  test-core_func_noise  test-core_func_packing  test-core_func_swizzle  test-core_func_trigonometric  test-core_func_vector_relational  test-core_setup_force_cxx98  (+22 more)
libraries/stb/: CMakeLists.txt
shaders/: CMakeLists.txt  Makefile  cmake_install.cmake  shader.frag  shader.vert
src/: ApplicationFactory.cpp  ApplicationFactory.hpp  Attachment.cpp  Attachment.hpp  AttachmentFactory.cpp  AttachmentFactory.hpp  CMakeLists.txt  CommandBufferFactory.cpp  CommandBufferFactory.hpp  CommandBufferRecorder.hpp  DeviceFactory.cpp  DeviceFactory.hpp  FramebufferFactory.cpp  FramebufferFactory.hpp  GameLoop.cpp  GameLoop.hpp  InstanceFactory.cpp  InstanceFactory.hpp  Layers.cpp  Layers.hpp  Main.cpp  Makefile  PhysicalDeviceFactory.cpp  PhysicalDeviceFactory.hpp  PhysicalDeviceQueueFactory.cpp  PhysicalDeviceQueueFactory.hpp  PipelineFactory.cpp  PipelineFactory.hpp  Renderer.cpp  Renderer.hpp  Renderpass.cpp  Renderpass.hpp  Runtime.cpp  Runtime.hpp  SemaphoreFactory.cpp  SemaphoreFactory.hpp  ShaderLoader.cpp  ShaderLoader.hpp  Subpass.cpp  Subpass.hpp  (+9 more)
src/Engine/Core/: GameLoop.cpp  GameLoop.hpp  Main.cpp
src/Engine/Geometry/: Vertex2D.hpp
(+183 files in other folders)
